--- a/index.html
+++ b/index.html
@@ -111,11 +111,7 @@
 
 <p><a href="install.html">   Installation and running </a></p>
 
-<p><a href="examples.html">   Examples </a></p>
-
-<p><a href="challenges.html"> Challenges </a></p>
-
-<p><a href="commands.html">  Commands in Compy </a></p>
+<p><a href="lesson01.html">   Lessons </a></p>
 
 <p><a href="colors.html">  Colors in Compy </a></p>
 
