--- a/index.html
+++ b/index.html
@@ -105,9 +105,13 @@
     fell in love with python. </p>
 
 <p> The Compy Project aims to blend the beautiful, colorful and easy
-    screen familiar to Commodore users with the elegant syntax of python.</p>
+    screen familiar to Commodore users with the elegant syntax of python.
+    <a href="https://github.com/jjdenis/Compy"> The code is kept in Github.  </a> </p>
 
-<p> To start, check how to install it, then run the examples, and then, and only then, try the challenges. </p>
+<p> To start, check how to install it, then run the examples, and then, and only then,
+    try the challenges. </p>
+
+
 
 <p><a href="install.html">   Installation and running </a></p>
 
