--- a/install.html
+++ b/install.html
@@ -101,7 +101,7 @@ To install Compy you need these things:
     <li> Python 2.7 running in your system (to check if you have it, open a terminal and type <code>python</code>,
        it should open a python console </li>
     <li> A python library called WxPython, check if you have it typing <code>import wx</code> in the python console</li>
-    <li> Some other python libraries: jinja2, </li>
+    <li> Some other python libraries:  unidecode and fuzzywuzzy</li>
     <li> The Compy program </li>
 </ul>
 
@@ -109,12 +109,13 @@ To install Compy you need these things:
 
 <pre class="code">
 
-    <code>$ pythonw hello_world.py.</code>
+    <code> > pythonw ex_hello_world.py</code>
 
 </pre>
 
-<p> Important: If you don't know what I'm talking about, don't worry,
-    just find someone who is more into computers and ask him or her
+<p> Tip: If you don't know what I'm talking about, but you want to learn python,
+    don't worry,
+    just find someone who is more into computers and ask her/him
     to set things up for you </p>
 
 </div>
